--- a/css/demo.css
+++ b/css/demo.css
@@ -1,12 +1,85 @@
+::-moz-selection {
+  background: #ff9500;
+  color: #fff;
+}
+
+::selection {
+  background: #ff9500;
+  color: #fff;
+}
+
+html {
+  background: url("../img/back.png") fixed;
+}
+
 body {
   width: 960px;
-  margin: 0 auto;
+  margin: 40px auto;
+  margin-top: 100px;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 20px #000;
+  box-shadow: 1px 1px 20px #000;
+  padding: 20px;
+  padding-top: 0;
 }
+
 .muted {
   color: #bbb;
 }
+
 .highlight pre code {
   background: #2d2d2d;
   color: #ccc;
   white-space: pre-wrap;
+}
+
+.navbar-fixed-top .container-fluid {
+  width: 960px;
+}
+
+.header {
+  padding: 10px 0;
+}
+
+.page-header h3 {
+  width: 960px;
+  background: #3b3b3b;
+  color: #fff;
+  padding: 15px 20px;
+  margin-left: -20px;
+}
+
+#ribbon {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 170px;
+  width: 200px;
+}
+
+#ribbon .line {
+  text-align: center;
+  white-space: nowrap;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  background-color: #b3d107;
+  padding: 1px 0;
+  overflow: hidden;
+  -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+  position: relative;
+  top: 45px;
+  width: 250px;
+}
+
+#ribbon a {
+  color: #fff;
+  border: 1px solid #d5e965;
+  display: block;
+  margin: 0.05em 0;
+  padding: 0.5em 3.5em;
+  text-align: center;
+  text-decoration: none;
 }
