--- a/jade/index.jade
+++ b/jade/index.jade
@@ -90,3 +90,26 @@ body(data-spy="scroll", data-target=".navbar-default")
 			|O_o.stringJson({ x: 5 });            // '{"x":5}'
 			|O_o.stringJson({x: 5, y: 6});        // '{"x":5,"y":6}' or '{"y":6,"x":5}'
 			</code>
+
+	// Form
+	.page-header: h3#go_forms Form
+	h4 Form filling
+	div.highlight.javascript
+		pre
+			!{html}
+			<code>// HTML code
+			|&lt;form action="someaction" id="form_for_fill"&gt;
+			|	&lt;input name="first_name"&gt;
+			|	&lt;input name="last_name"&gt;
+			|	&lt;input type="submit" value="Отправить"&gt;
+			|&lt;/form&gt;
+			|<br>
+			|// Javascript code
+			|&lt;script&gt;
+			|var data = {
+			|	first_name: 'Some name',
+			|	last_name: 'Some last name'
+			|}
+			|O_o.unserialize('#form_for_fill', data);
+			|&lt;/script&gt;
+			</code>
