--- a/O_o.styl
+++ b/O_o.styl
@@ -1,28 +1,23 @@
 @import 'nib'
 
 .O_o-disable_window
-	position fixed
+	fixed top left
 	z-index 2000
-	top 0
-	left 0
-	width 100%
-	height 100%
+	size(100%, 100%)
 	background rgba(0,0,0, 0.3)
 	.alert
 		.O_o-alert_message
 			clear both
 		border 1px solid rgb(180, 180, 180)
 		width 350px
+		margin-top -(@width/2)px 
 		background #f5f5f5
 		color #515151
 		border-radius 5px
 		box-shadow 0 3px 7px rgba(0, 0, 0, 0.5)
-		position absolute
+		absolute top 50% left 50%
 		z-index 2001
-		left 50%
-		top 50%
 		margin-top -55px
-		margin-left -175px
 		text-align center
 		font-size 14px
 		padding 20px 0
@@ -30,8 +25,7 @@
 		.prompt_area
 			display block
 			margin 0 auto
-			width 300px
-			height 100px
+			size(300px, 100px)
 			margin-top 20px
 		.close
 			margin-top -20px
